add node_context folder and js context example

--- a/src/index.html
+++ b/src/index.html
@@ -7,5 +7,14 @@
 
 <h1> I have conquered <strong>ALL</strong> the platforms!
 
+<script type="text/javascript">
+	'use strict';
+	var CONTEXT = 'BROWSER';
+	var test = require('./node_context');
+	test.log('test');
+
+	console.log(CONTEXT);
+
+</script>
 </body>
 </html>
